<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#659C27B0"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        app:srcCompat="@drawable/_0230301_231416_resized"
        tools:srcCompat="@drawable/_0230301_231416_resized" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="#31FF5722"
            android:padding="20dp"
            android:text="@string/a_form_of_beauty_for_an_entire_planet" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="20dp"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/prev"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/previous" />

        <Button
            android:id="@+id/next"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/next" />
    </LinearLayout>
</LinearLayout>