<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#799B3FB5"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        app:srcCompat="@drawable/_0230226_221938"
        tools:srcCompat="@drawable/_0230226_221938" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="#562196F3"
            android:padding="20dp"
            android:text="@string/shines_of_borrowed_light_yet_glow_as_if_there_is_nothing_brighter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="20dp"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/prev"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/previous" />

        <Button
            android:id="@+id/next"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/next" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/_0230226_221938" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/_0230226_221938" />
</LinearLayout>